# Smart_Window

./: BUILD.gn  README.md  app.py  shadow.py
Project/Smart_Window/: BUILD.gn  Body.c  app_demo_aht20.c  app_demo_beep_control.c  app_demo_mq2.c  body_hw.c  body_hw.h  dc_motor.c  dc_motor.h  dht.c  dht11.h  dht11_example.c  iot_config.h  iot_main.c  iot_profile.c  iot_profile.h  main.c  motor.c  rain.c  rain.h  raindrop.c  sg90.c  sg90.h  sg90GO.c  udp_config.h
Smart_Control/: smartwindow.py
audio/: audio.c
